--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -3,40 +3,62 @@ title: NAT o enmascaramiento IP
 date: 2022-02-08 13:30:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, smr, teoría]
+img_path: /assets/img/nat/
 ---
-
-## Aviso
-
-En la Sección 6.9 del libro está muy bien explicado. Va bien para entender un NAT a nivel general.
 
 {:.section}
 ## Características de un NAT
 
-Como sabes, no hay suficientes direcciones IPv4 públicas para asignar una dirección única a cada dispositivo conectado a Internet. Las redes suelen implementarse mediante el uso de direcciones IPv4 privadas, según se definen en RFC 1918. El rango de direcciones incluido en RFC 1918 se incluye en la siguiente tabla. Es muy probable que la computadora que utilizas para ver este curso tenga asignada una dirección privada.
+Como sabes, no hay suficientes direcciones IPv4 públicas para asignar una dirección única a cada dispositivo conectado a Internet. Las redes suelen implementarse mediante el uso de direcciones IPv4 privadas, según se definen en RFC 1918. El rango de direcciones incluido en RFC 1918 se incluye en la siguiente tabla. Es muy probable que la computadora que utilizas tenga asignada una dirección privada.
 
 | Clase | Rango de @ privadas | Prefijo | Nº de redes |
 |---|---|---|---|
 | Clase A | 10.0.0.0 a 10.255.255.255 | 10.0.0.0/8 | 1 red |
 | Clase B | 172.16.0.0 a 172.31.255.255 | 172.16.0.0/12 | 16 redes |
-| Clase C | 192.168.0.0 a 192.168.255.255 | 192.168.0.0/16| 255 redes |
+| Clase C | 192.168.0.0 a 192.168.255.255 | 192.168.0.0/16| 256 redes |
+
+{:.question}
+¿Por qué el rango de direcciones privadas de Clase B se define del siguiente modo: 172.16.0.0/12?
 
 Estas direcciones privadas se utilizan dentro de una organización o un sitio para permitir que los dispositivos se comuniquen localmente. Sin embargo, debido a que estas direcciones no identifican a una sola empresa u organización, las direcciones IPv4 privadas no se pueden enrutar a través de Internet. Para permitir que un dispositivo con una dirección IPv4 privada acceda a recursos y dispositivos fuera de la red local, primero se debe traducir la dirección privada a una dirección pública.
 
 NAT proporciona la traducción de direcciones privadas a direcciones públicas, como se muestra en la figura. Esto permite que un dispositivo con una dirección IPv4 privada acceda a recursos fuera de su red privada, como los que se encuentran en Internet. NAT, combinado con direcciones IPv4 privadas, ha sido el método principal para preservar las direcciones IPv4 públicas. Se puede compartir una única dirección IPv4 pública entre cientos o incluso miles de dispositivos, cada uno configurado con una dirección IPv4 privada exclusiva.
 
-![Traducción de direcciones privadas a públicas](/assets/img/nat/Traduccion-de-direcciones-privadas-a-publicas.png)
+![Traducción de direcciones privadas a públicas](Traduccion-de-direcciones-privadas-a-publicas.png)
 _Traducción de direcciones privadas a públicas_
 
+<details class="card mb-2">
+  <summary class="card-header question">¿Quién es el culpable de que sigamos usando IPv4?</summary>
+  <div class="card-body" markdown="1">
+
 Sin NAT, el agotamiento del espacio de direcciones IPv4 habría ocurrido mucho antes del año 2000. Sin embargo, NAT tiene limitaciones y desventajas, que se explorarán más adelante en este módulo. La solución al agotamiento del espacio de direcciones IPv4 y a las limitaciones de NAT es la transición final a IPv6.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+{:.section}
+## ¿Qué es un NAT?
+
+NAT tiene muchos usos, pero el principal es conservar las direcciones IPv4 públicas. Esto se logra al permitir que las redes utilicen direcciones IPv4 privadas internamente y al proporcionar la traducción a una dirección pública solo cuando sea necesario. NAT tiene el beneficio percibido de agregar un grado de privacidad y seguridad a una red, ya que oculta las direcciones IPv4 internas de redes externas.
+
+Los routers con NAT habilitada se pueden configurar con una o más direcciones IPv4 públicas válidas. Estas direcciones públicas se conocen como “NAT pool”. Cuando un dispositivo interno envía tráfico fuera de la red, el router con NAT habilitada traduce la dirección IPv4 interna del dispositivo a una dirección pública del conjunto de NAT. Para los dispositivos externos, todo el tráfico entrante y saliente de la red parece tener una dirección IPv4 pública del pool de direcciones proporcionado.
+
+En general, los routers NAT funcionan en la frontera de una red de rutas internas. Una red stub es una o más redes con una única conexión a su red vecina, una entrada y una salida de la red. En el ejemplo de la ilustración, el R2 es un router de frontera. Visto desde el ISP, el R2 forma una red stub.
+
+Cuando un dispositivo dentro de la red stub desea comunicarse con un dispositivo fuera de su red, el paquete se reenvía al router de frontera. El router de frontera realiza el proceso de NAT, es decir, traduce la dirección privada interna del dispositivo a una dirección pública, externa y enrutable.
 
 {:.subsection}
 ### ¿Cómo funciona un NAT?
 
 La traducción de estas direcciones de red (NAT) es un mecanismo que permite a varias máquinas de una LAN con direcciones privadas para que puedan acceder a una red externa, por ejemplo Internet, con una IP pública. Esta traducción de direcciones también es llamada **enmascaramiento IP**.
 
-Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router, un cortafuegos o un equipo dedicado (proxy NAT).
+{:.question}
+¿Es lo mismo NAT que enmascaramiento IP?
 
-![Funcionamiento de un NAT](/assets/img/nat/Como-Funciona-NAT.gif)
+Para que sea posible hacer esa traducción de direcciones ha de haber un dispositivo que se encargue de hacer esa traducción en ambos sentidos que generalmente es un router.
+
+![Funcionamiento de un NAT](Como-Funciona-NAT.gif)
 _Funcionamiento de un NAT_
 
 {:.subsection}
@@ -46,24 +68,31 @@ Cuando se usa NAT, las direcciones IPv4 tienen diferentes designaciones en funci
 
 NAT incluye cuatro tipos de direcciones:
 
-- Dirección local interna
-- Dirección global interna
-- Dirección local externa
-- Dirección global externa
+- Dirección local interna.
+- Dirección global interna.
+- Dirección local externa.
+- Dirección global externa.
+
+Desde el punto de vista del ordenador que envía el mensaje detrás de un router:
+
+- Dirección local (privada) interna (origen). Por ejemplo: 192.168.1.10
+- Dirección global (pública) interna (origen). Por ejemplo: la @ IP pública del IES Tiempos Modernos: 40.77.167.227.
+- Dirección local (privada) externa (destino). Por ejemplo: La @ IP de Google: 142.250.184.163.
+- Dirección global (pública) externa (destino). Por ejemplo: La @ IP de Google: 142.250.184.163.
 
 Al determinar qué tipo de dirección se utiliza, es importante recordar que la terminología de NAT siempre se aplica desde la perspectiva del dispositivo con la dirección traducida:
 
-- **Dirección interna**: La dirección del dispositivo que NAT está traduciendo.
-- **Dirección externa**: La dirección del dispositivo de destino.
+- **Dirección interna**: La dirección del dispositivo que NAT está traduciendo. Se puede ver como la dirección origen.
+- **Dirección externa**: La dirección del dispositivo de destino. Se puede ver como la dirección destino.
 
 NAT también usa los conceptos de local o global con relación a las direcciones:
 
-- **Dirección local**: Una dirección local es cualquier dirección que aparece en la parte interna de la red.
-- **Dirección global**: Una dirección global es cualquier dirección que aparece en la parte externa de la red.
+- **Dirección local**: Una dirección local es cualquier dirección que aparece en la parte interna de la red. Se puede ver como la dirección privada.
+- **Dirección global**: Una dirección global es cualquier dirección que aparece en la parte externa de la red. Se puede ver como la dirección pública.
 
 Los términos «interna» y «externa» se combinan con los términos «global» y «local» para hacer referencia a direcciones específicas. El router NAT, R2 en la figura, es el punto de demarcación entre las redes internas y externas. R2 está configurado con un pool de direcciones públicas para asignar a los hosts internos. Consulta la tabla de red y NAT de la figura para obtener la siguiente explicación de cada uno de los tipos de direcciones NAT.
 
-![Funcionamiento de un NAT](/assets/img/nat/Terminologia-de-NAT.png)
+![Funcionamiento de un NAT](Terminologia-de-NAT.png)
 _Terminología de NAT_
 
 PC1 tiene una dirección local interna de 192.168.10.10. Desde la perspectiva de la PC1, el servidor web tiene la dirección externa 209.165.201.1. Cuando se envían los paquetes de la PC1 a la dirección global del servidor web, la dirección local interna de la PC1 se traduce al 209.165.200.226 (dirección global interna). La dirección del dispositivo externo generalmente no se traduce porque esa dirección suele ser una dirección IPv4 pública.
@@ -72,9 +101,6 @@ Observa que la PC1 tiene distintas direcciones locales y globales, mientras que 
 
 {:.question}
 ¿Qué es un NAT?
-
-{:.question}
-¿Es lo mismo NAT que enmascaramiento IP?
 
 {:.section}
 ## Tipos de NAT
@@ -94,10 +120,11 @@ Se trata del típico caso en el que necesitamos publicar un servicio de la red i
 
 La conversión de direcciones de red (NAT) estática, o de correlación, proporciona una correspondencia biunívoca entre direcciones IP privadas y direcciones IP públicas. Permite correlacionar una dirección IP de la red interna con una dirección IP que se desea hacer pública.
 
-![NAT Estático](/assets/img/nat/NAT-Estatico.png)
+![NAT Estático](NAT-Estatico.png)
 _NAT Estático_
 
-⚠️ La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+> La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+{:.prompt-warning}
 
 <iframe src="https://www.youtube.com/embed/dV9jK4g1uyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -108,7 +135,7 @@ La NAT dinámica utiliza un pool de direcciones públicas y las asigna según el
 
 En la figura, PC3 ha accedido a Internet utilizando la primera dirección disponible en el pool NAT dinámico. Las demás direcciones siguen disponibles para utilizarlas. Al igual que la NAT estática, la NAT dinámica requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
 
-![NAT Estático](/assets/img/nat/NAT-Dinamica.png)
+![NAT Estático](NAT-Dinamica.png)
 _NAT dinámico_
 
 <iframe src="https://www.youtube.com/embed/rge-SwOx6Dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -123,7 +150,7 @@ Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a
 {:.question}
 ¿Puede usarse globalmente el mismo puerto? ¿E internamente?
 
-![Proceso de PAT](/assets/img/nat/Proceso-de-PAT.gif)
+![Proceso de PAT](Proceso-de-PAT.gif)
 _Proceso de PAT_
 
 A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 1555, en este ejemplo) para identificar el dispositivo en el que se originó el paquete. La dirección de origen (SA, source address) es la dirección local interna con el número de puerto asignado TCP / UDP agregado. La dirección de destino (DA, destination address) es la dirección global externa con el número de puerto de servicio agregado. En este ejemplo, el puerto de servicio es 80, que es HTTP.
@@ -154,7 +181,7 @@ Cuando SERVIDOR realiza una conexión a Internet, su proveedor le proporciona un
 
 Debemos tener en cuenta que los pasos 1 y 4 se producen dentro de una LAN, mientras que los números 2 y 3 proceden de una WAN.
 
-![img-description](/assets/img/nat/ejemploNat.png)
+![img-description](ejemploNat.png)
 _Esquema de un ejemplo de utilización de enmascaramiento IP_
 
 En CLIENTE, configuramos TCP/IP para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
