--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -107,61 +107,97 @@ Observa que la PC1 tiene distintas direcciones locales y globales, mientras que 
 
 Existen 3 tipos de NAT:
 
-- NAT estático
-- NAT dinámico
-- PAT
+- NAT estática (de correlación)
+- NAT dinámica (ocultación)
+- PAT (con correlación de puerto)
 
 {:.subsection}
-### NAT estático
+### NAT estática
 
-Todos los paquetes tienen la misma IP privada y el mismo puerto interno son mapeados siempre a la misma dirección IP pública y al mismo puerto externo. Cualquier máquina externa puede enviar un paquete a la máquina interna indicando la dirección y el puerto externo que ha sido mapeado.
+La NAT estática consiste en una asignación uno a uno entre direcciones locales y globales. Estas asignaciones son configuradas por el administrador de red y se mantienen constantes.
 
-Se trata del típico caso en el que necesitamos publicar un servicio de la red interna para que sea accesible desde la red externa, está pensado para el tráfico entrante.
-
-La conversión de direcciones de red (NAT) estática, o de correlación, proporciona una correspondencia biunívoca entre direcciones IP privadas y direcciones IP públicas. Permite correlacionar una dirección IP de la red interna con una dirección IP que se desea hacer pública.
+En la ilustración, el R2 se configuró con las asignaciones estáticas para las direcciones locales internas del Svr1, la PC2 y la PC3. Cuando estos dispositivos envían tráfico a Internet, sus direcciones locales internas se traducen a las direcciones globales internas configuradas. Para redes externas, estos dispositivos parecen tener direcciones IPv4 públicas.
 
 ![NAT Estático](NAT-Estatico.png)
 _NAT Estático_
 
-> La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
-{:.prompt-warning}
+La NAT estática es particularmente útil para servidores web o dispositivos que deben tener una dirección coherente a la que se pueda acceder desde Internet, como el servidor web de una empresa. También es útil para dispositivos que deben ser accesibles por personal autorizado cuando se encuentra fuera del sitio, pero no por el público en general en Internet. Por ejemplo, un administrador de red de PC4 puede usar SSH para obtener acceso a la dirección global interna de Svr1 (209.165.200.226). R2 traduce esta dirección global interna a la dirección local interna 192.168.10.10 y conecta la sesión a Svr1.
+
+La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+
+{:.question}
+¿Un router con NAT estática convierte a un router en un dispositivo de capa 4?
+
+{:.subsubsection}
+#### Configurar NAT estática
+
+Para configurar una NAT estática puedes seguir los pasos del artículo [NAT Estática](https://ccnadesdecero.es/nat-estatica/) o seguir los pasos del siguiente vídeo:
 
 <iframe src="https://www.youtube.com/embed/dV9jK4g1uyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 {:.subsection}
-### NAT dinámico
+### NAT dinámica
 
 La NAT dinámica utiliza un pool de direcciones públicas y las asigna según el orden de llegada. Cuando un dispositivo interno solicita acceso a una red externa, la NAT dinámica asigna una dirección IPv4 pública disponible del pool.
 
 En la figura, PC3 ha accedido a Internet utilizando la primera dirección disponible en el pool NAT dinámico. Las demás direcciones siguen disponibles para utilizarlas. Al igual que la NAT estática, la NAT dinámica requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
 
 ![NAT Estático](NAT-Dinamica.png)
-_NAT dinámico_
+_NAT dinámica_
+
+{:.question}
+¿Un router con NAT dinámica convierte a un router en un dispositivo de capa 4?
+
+{:.subsubsection}
+#### Configurar NAT dinámica
+
+Para configurar una NAT estática puedes seguir los pasos del artículo [NAT Dinámica](https://ccnadesdecero.es/nat-dinamica/) o seguir los pasos del siguiente vídeo:
 
 <iframe src="https://www.youtube.com/embed/rge-SwOx6Dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 {:.subsection}
 ### PAT
 
-La traducción de la dirección del puerto (PAT, Port Address Translation), también conocida como «NAT con sobrecarga», asigna varias direcciones IPv4 privadas a una única dirección IPv4 pública o a algunas direcciones. Esto es lo que hacen la mayoría de los routers domésticos. El ISP asigna una dirección al router, sin embargo, varios miembros del hogar pueden acceder simultáneamente a Internet. Esta es la forma más común de NAT tanto para el hogar como para la empresa.
-
-Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a que cada dirección privada también se rastrea con un número de puerto. Cuando un dispositivo inicia una sesión TCP / IP, genera un valor de puerto de origen TCP o UDP, o un ID de consulta especialmente asignado para ICMP, para identificar de forma única la sesión. Cuando el router NAT recibe un paquete del cliente, utiliza su número de puerto de origen para identificar de forma exclusiva la traducción NAT específica.
+La traducción de la dirección del puerto (PAT, Port Address Translation), también conocida como "NAT con sobrecarga", asigna varias direcciones IPv4 privadas a una única dirección IPv4 pública o a algunas direcciones. Esto es lo que hacen la mayoría de los routers domésticos. El ISP asigna una dirección al router, sin embargo, varios miembros del hogar pueden acceder simultáneamente a Internet. Esta es la forma más común de NAT tanto para el hogar como para la empresa.
 
 {:.question}
-¿Puede usarse globalmente el mismo puerto? ¿E internamente?
+¿Qué tipo de NAT usan la mayoría de los routers domésticos?
+
+Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a que cada dirección privada también se rastrea con un número de puerto. Cuando un dispositivo inicia una sesión TCP / IP, genera un valor de puerto de origen TCP o UDP, o un ID de consulta especialmente asignado para ICMP, para identificar de forma única la sesión. Cuando el router NAT recibe un paquete del cliente, utiliza su número de puerto de origen para identificar de forma exclusiva la traducción NAT específica.
 
 ![Proceso de PAT](Proceso-de-PAT.gif)
 _Proceso de PAT_
 
 A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 1555, en este ejemplo) para identificar el dispositivo en el que se originó el paquete. La dirección de origen (SA, source address) es la dirección local interna con el número de puerto asignado TCP / UDP agregado. La dirección de destino (DA, destination address) es la dirección global externa con el número de puerto de servicio agregado. En este ejemplo, el puerto de servicio es 80, que es HTTP.
 
-{:.question}
-¿Qué diferencias hay entre un NAT y un PAT?
+Para la dirección de origen, el R2 traduce la dirección local interna a una dirección global interna con el número de puerto agregado. La dirección de destino no cambia, pero ahora se conoce como la dirección IPv4 global externa. Cuando el servidor web responde, se invierte la ruta.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué diferencias hay entre un NAT y un PAT?</summary>
+  <div class="card-body" markdown="1">
+
+| NAT | PAT |
+|---|---|
+| Mapeo uno a uno entre las direcciones Locales Internas y Globales Internas. | Una dirección Interna Global puede ser mapeada a muchas direcciones Locales Internas. |
+| Utiliza sólo direcciones IPv4 en el proceso de traducción. | Utiliza direcciones IPv4 y números de puertos de origen TCP o UDP en el proceso de traducción. |
+| Se requiere una dirección única Global Interna para cada host interno que acceda a la red externa. |  Una única y exclusiva dirección Global Interna puede ser compartida por muchos hosts internos que acceden a la red exterior. |
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 ¿Es lo mismo PAT que NAT con sobrecarga?
 
+{:.question}
+¿Un router con PAT convierte a un router en un dispositivo de capa 4?
+
 <iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+{:.subsubsection}
+#### Configurar PAT
+
+Para configurar una NAT estática puedes seguir los pasos del artículo [PAT](https://ccnadesdecero.es/configurar-pat/) o seguir los pasos del siguiente vídeo:
 
 <iframe src="https://www.youtube.com/embed/I6MLqzfy6BI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -173,18 +209,18 @@ En el ejemplo anterior, los números de puerto del cliente, 1331 y 1555, no se m
 PAT intenta conservar el puerto de origen inicial. Sin embargo, si el puerto de origen original ya está en uso, PAT asigna el primer número de puerto disponible a partir del comienzo del grupo de puertos apropiado 0-511, 512-1,023 o 1,024-65,535.
 
 {:.subsubsection}
-#### (Opcional) Ejemplo de funcionamiento PAT
+#### Ejemplo de funcionamiento PAT
 
-Supongamos que tenemos un host, que llamaremos CLIENTE y que tiene por dirección IP 10.1.1.5 y máscara de toda la red 255.0.0.0, que quiere acceder a Internet solicitando páginas a través de su navegador. La conexión a Internet se ha realizado en otro host de la red al que llamaremos SERVIDOR con dirección IP 10.1.1.1 y que está en la misma subred que CLIENTE. 
+Supongamos que tenemos un host, que llamaremos CLIENTE y que tiene por dirección IP 10.1.1.5 y máscara de toda la red 255.0.0.0, que quiere acceder a Internet solicitando páginas a través de su navegador. La conexión a Internet se ha realizado en otro host de la red al que llamaremos SERVIDOR con dirección IP 10.1.1.1 y que está en la misma subred que CLIENTE.
 
-Cuando SERVIDOR realiza una conexión a Internet, su proveedor le proporciona una dirección IP a la interfaz de red WAN por la que se conecta remotamente que es 213.97.2.12. 
+Cuando SERVIDOR realiza una conexión a Internet, su proveedor le proporciona una dirección IP a la interfaz de red WAN por la que se conecta remotamente que es 213.97.2.12.
 
 Debemos tener en cuenta que los pasos 1 y 4 se producen dentro de una LAN, mientras que los números 2 y 3 proceden de una WAN.
 
 ![img-description](ejemploNat.png)
 _Esquema de un ejemplo de utilización de enmascaramiento IP_
 
-En CLIENTE, configuramos TCP/IP para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto. 
+En CLIENTE, configuramos TCP/IP para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto.
 
 Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
 
@@ -194,6 +230,3 @@ Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el 
 - [Características de NAT](https://ccnadesdecero.es/caracteristicas-nat/)
 - [Tipos de NAT](https://ccnadesdecero.es/tipos-nat/)
 - [Ventajas y Desventajas de NAT](https://ccnadesdecero.es/ventajas-desventajas-nat/)
-- [NAT Estática](https://ccnadesdecero.es/nat-estatica/)
-- [NAT Dinámica](https://ccnadesdecero.es/nat-dinamica/)
-- [PAT](https://ccnadesdecero.es/configurar-pat/)
